--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,4 +7,9 @@
         <attr name="fab_colorRipple" format="color" />
         <attr name="fab_shadow" format="boolean" />
     </declare-styleable>
+    <declare-styleable name="RippleView">
+        <attr name="rippleColor" format="color" />
+        <attr name="alphaFactor" format="float" />
+        <attr name="hover" format="boolean" />
+    </declare-styleable>
 </resources>
