I should read before commiting

--- a/app/src/main/res/layout/activity_troops.xml
+++ b/app/src/main/res/layout/activity_troops.xml
@@ -12,24 +12,15 @@
         android:background="?attr/colorPrimary"
         app:theme="@style/myCustomTheme"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/troopsPager"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/listView_troops"
         android:layout_below="@+id/toolbar"
-        android:background="@color/white">
+        android:layout_centerHorizontal="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="7dp"
+        android:padding="10dp"/>
 
-    <android.support.v4.view.PagerTabStrip
-        android:id="@+id/pager_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:background="@color/viewpager_background"
-        android:textColor="@color/colorPrimary"
 
-        />
-    </android.support.v4.view.ViewPager>
-    
 </RelativeLayout>
