--- a/app/src/main/res/layout/activity_traps.xml
+++ b/app/src/main/res/layout/activity_traps.xml
@@ -13,24 +13,14 @@
         app:theme="@style/myCustomTheme"/>
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/trapsPager"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/listView_traps"
         android:layout_below="@+id/toolbar"
-        android:background="@color/white">
-
-        <android.support.v4.view.PagerTabStrip
-            android:id="@+id/pager_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:background="@color/viewpager_background"
-            android:textColor="@color/colorPrimary"
-
-            />
-    </android.support.v4.view.ViewPager>
+        android:layout_centerHorizontal="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="7dp"
+        android:padding="10dp"/>
 
 </RelativeLayout>
