barbarian added to layout

--- a/app/src/main/res/layout/fragment_xbow.xml
+++ b/app/src/main/res/layout/fragment_xbow.xml
@@ -10,14 +10,14 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/trans_red"
+        android:background="@color/trans_greyblue"
         >
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:id="@+id/imageButton_army"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/def_xbow_four"
+            android:background="@drawable/trp_barbarain"
             />
         </FrameLayout>
 
