--- a/app/src/main/res/layout/fragment_barbarian.xml
+++ b/app/src/main/res/layout/fragment_barbarian.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:background="@color/trans_violet"
+        android:background="@color/accent_material_light"
         >
         <ImageButton
             android:layout_width="match_parent"
